Initial configuration to backend access